--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExYzM3eXhpb3BqMm5vY2d4Z2s3Z282d2N4Y21mZ282Z2N4Y21mZ2c2Z2N4Yw/cLS1cfxvGOPVpf9g3y/giphy.gif" alt="Cute GIF" class="cute-gif"> <!-- Added GIF -->
         <h1>Will you be my Valentine?</h1>
         <div class="buttons">
-          <a id="yesButton" href="mailto:your-email@example.com">Yes</a> <!-- Replace your-email@example.com -->
+          <a id="yesButton" href="mailto:saykwko@gmail.com">Yes</a> <!-- Replace your-email@example.com -->
           <button id="noButton">No</button>
         </div>
       </div>
